--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,1 +1,6 @@
-aiueo
+.side-bar
+  .side-bar__user-name
+    .side-bar__user-name-top-items
+      .side-bar__user-name-top-items__name
+      .side-bar__user-name-top-items__icons
+  .side-bar__gourp-list
