--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,6 +1,20 @@
-.side-bar
-  .side-bar__user-name
-    .side-bar__user-name-top-items
-      .side-bar__user-name-top-items__name
-      .side-bar__user-name-top-items__icons
-  .side-bar__gourp-list
+.chat-side
+  .side-header
+    .side-header__box
+      %p.side-header__box__username
+        name
+      %ul.side-header__box__menu
+        %li.side-header__box__edit-user
+          = link_to "#" do
+            = icon('fas','edit')
+            %span<>
+        %li.side-header__box__new-group
+          = link_to "#" do
+            = icon('fas','cog')
+            %span<>
+  .groups
+    = link_to '#', class:"group" do
+      %p.group__group-name
+        test
+      %p.group__latest-messagge
+        まだメッセージがありません
