--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,4 +1,10 @@
-.main-chat
-  .main-chat__group-info
-  .main-chat__message-list
-  .main-chat__message-main
+.chat-main
+  .main-header
+    .main-header__left-box
+      %h2.main-header__left-box__current-group
+        text
+      %ul.main-header__left-box__member-list
+        Member:
+        %li.main-header__left-box__member-list-member
+  .messages
+  .form
