--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -56,21 +56,42 @@
     }
   } 
 
-  .main-chat {
+  .chat-main {
     height: 100%;
     background-color:gray;
     width: calc(100% - 300px);
-    &__group-info {
+    .main-header {
       background-color:#ffffff;
       height: 100px;
-      width: 100%;
-      border: solid #eeeeee;
+      border-bottom: solid 1px #eee;
+      padding: 0 40px;
+      overflow: scroll;
+      display: flex;
+      justify-content: space-between;
+      .main-header__left-box {
+        margin-top: 35px;
+        &__current-group {
+          font-size: 20px;
+          color: #333;
+          margin-bottom: 15px;
+        }         
+        &__member-list {
+          display: flex;
+          font-size: 12px;
+          color: #999999;
+          li {
+            display: flex;
+            font-size: 12px;
+            color: #999999;
+          }
+        }
+      }
     }
-    &__message-list {
+    .messages {
       background-color: #fafafa;
       height: calc(100% - 190px);
     }
-    &__message-main {
+    .form {
       background-color: #d2d2d2;
       height: 90px;
       bottom: 0;
