--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -8,12 +8,13 @@
   padding: 0;
   width: 100vw;
   display: flex;
-
+  $nabybule:#253141;
   .chat-side {
-    background-color: #253141;
+    
+    background-color: $nabybule;
     width: 300px;
     .side-header {
-      background-color: #253141;
+      background-color: $nabybule;
       height: 100px;
       display: flex;
       align-items: center;
@@ -21,7 +22,7 @@
       color: white;
       &__box {
         height: 20px;
-        background-color: #253141;
+        background-color: $nabybule;
         display: flex;
         justify-content: space-between;
         width: 100%;
@@ -35,6 +36,7 @@
             }
           }
         }
+      
       }
     }
     .groups {
@@ -43,14 +45,14 @@
       padding: 20px 20px 0;
       .group {
         color: white;
-        margin-bottom: 40px;
         text-decoration: none;
-        &__group-name {
+        &__name {
           font-size: 15px;
           margin-bottom: 5px;
         }
-        &__latest-messagge {
+        &__message {
           font-size: 11px;
+          margin-bottom: 40px;
         }
       }
     }
@@ -79,23 +81,89 @@
           display: flex;
           font-size: 12px;
           color: #999999;
-          li {
-            display: flex;
-            font-size: 12px;
-            color: #999999;
-          }
         }
+      }
+      .main-header__edit-btn {
+        height: 40px;
+        line-height: 40px;
+        padding: 0 20px;
+        margin-top: 30px;
+        border: solid 1px #38aef0;
+        position: absolute;
+        right: 40px;
+        a {
+          color: #38aef0;
+          text-decoration: none;
+        }
+        
       }
     }
     .messages {
       background-color: #fafafa;
       height: calc(100% - 190px);
+      padding: 46px 40px;
+      .message {
+        padding-bottom: 40px;
+        &__upper-info {
+          display: flex;
+          margin-bottom: 10px;
+          &-talker {
+            color: #434a54;
+            font-size: 16px;
+            font-weight: bold;
+          }
+          &-date {
+            color: #999999;
+            font-size: 12px;
+            margin-left: 10px;
+          }
+        }
+        .message__text {
+          color: #434a54;
+          font-size: 14px;
+          margin-bottom: 10px;
+        }
+      }
     }
-    .form {
+  
+    .forms {
       background-color: #d2d2d2;
       height: 90px;
-      bottom: 0;
+      padding: 20px 40px;
+
+      .form {
+        display: flex;
+        .input-box {
+          width: 100%;
+          display: flex;
+          position: relative;
+
+          &__text {
+            height: 50px;
+            width: 100%;
+            color: #434a54;
+            border-style: none;
+            padding:0 40px 0 10px;
+          }
+          &__image {
+            font-size: 1.3rem;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            &__file {
+              display: none;
+            }
+          }
+        }
+        .submit-btn {
+          width: 100px;
+          height: 50px;
+          padding: 0 30px;
+          margin-left: 15px;
+          background-color: #38aef0;
+          color: white;
+        }
+      }
     }
   }
-
 }
