--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,15 +2,15 @@
   .side-header
     .side-header__box
       %p.side-header__box__username
-        name
+        = current_user.name
       %ul.side-header__box__menu
-        %li.side-header__box__edit-user
+        %li.side-header__box__new-group
           = link_to "#" do
             = icon('fas','edit')
             %span<>
-        %li.side-header__box__new-group
-          = link_to "#" do
-            = icon('fas','cog')
+        %li.side-header__box__edit-user
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog', class: 'icon')
             %span<>
   .groups
     = link_to "#", class: "group" do
