--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -5,22 +5,18 @@
         = current_user.name
       %ul.side-header__box__menu
         %li.side-header__box__new-group
-          = link_to "#" do
+          = link_to new_group_path do
             = icon('fas','edit')
             %span<>
         %li.side-header__box__edit-user
           = link_to edit_user_path(current_user) do
             = icon('fas', 'cog', class: 'icon')
             %span<>
+            
   .groups
-    = link_to "#", class: "group" do
-      %p.group__name
-        test
-      %p.group__message
-        まだメッセージがありません
-
-    = link_to "#", class: "group" do
-      %p.group__name
-        test
-      %p.group__message
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      = link_to "#", class: "group" do
+        %p.group__name
+          = group.name
+        %p.group__message
+          まだメッセージがありません
