--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,8 @@
 @import "./reset";
 @import "config/colors";
 @import "./messages";
+@import "modules/chat";
+@import "modules/side_bar";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "modules/user";
