--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -10,27 +10,12 @@
       = link_to "#" do
         Edit
   .messages
-    .message
-      .message__upper-info
-        .message__upper-info-talker
-          talkername
-        .message__upper-info-date
-          2020/01/01
-      .message__text
-        aaaaaaaa
-    .message
-      .message__upper-info
-        .message__upper-info-talker
-          talkername
-        .message__upper-info-date
-          2020/01/01
-      .message__text
-        aaaaaaaa
-  .forms
+    = render @messages
     .form
-      .input-box
-        %input{type:"text", class: "input-box__text", placeholder: "type a message"}
-        %label{class: "input-box__image"}
-          = icon('fas', 'image')
-          %input{type:"file", class: "input-box__image__file"}
-      %input{type: "submit", class: "submit-btn", value: "Send"}
+      = form_for [@group, @message] do |f|
+        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
+        .form__mask
+          = f.label :image, class: 'form__mask__image' do
+            = icon('fas', 'image', class: 'icon')
+            = f.file_field :image, class: 'hidden'
+        = f.submit 'Send', class: 'form__submit'
