--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -95,7 +95,7 @@
           }
         }
       }
-      .submit-btn {
+      .form__submit {
         width: 100px;
         height: 50px;
         padding: 0 30px;
