--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -11,11 +11,21 @@
         Edit
   .messages
     = render @messages
-    .form
-      = form_for [@group, @message] do |f|
-        = f.text_field :content, class: 'form__message', placeholder: 'type a message'
-        .form__mask
-          = f.label :image, class: 'form__mask__image' do
+
+  .forms
+    = form_for [@group, @message] do |f|
+      .form
+        .input-box
+          = f.text_field :content, class: 'input-box__text', placeholder: 'type a message'
+          = f.label :image, class: 'input-box__image' do
             = icon('fas', 'image', class: 'icon')
-            = f.file_field :image, class: 'hidden'
+            = f.file_field :image, class: 'input-box__image__file'
         = f.submit 'Send', class: 'form__submit'
+  -# .forms
+  -#   .form
+  -#     .input-box
+  -#       %input{type:"text", class: "input-box__text", placeholder: "type a message"}
+  -#       %label{class: "input-box__image"}
+  -#         = icon('fas', 'image')
+  -#         %input{type:"file", class: "input-box__image__file"}
+  -#     %input{type: "submit", class: "submit-btn", value: "Send"}
