--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,11 +1,22 @@
 .message
-  .upper-message
-    .upper-message__user-name
-      = message.user.name
-    .upper-message__date
-      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
-  .lower-message
-    - if message.content.present?
-      %p.lower-message__content
-        = message.content
-    = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+  .massage
+    .message__upper-info
+      .message__upper-info-talker
+        = message.user.name
+      .message__upper-info-date
+        = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+    .message__text
+      - if message.content.present?
+        %p.lower-message__content
+          = message.content
+      = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
+
+-# .messages
+-#   .message
+-#     .message__upper-info
+-#       .message__upper-info-talker
+-#         talkername
+-#       .message__upper-info-date
+-#         2020/01/01
+-#     .message__text
+-#       aaaaaaaa
