--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -21,6 +21,8 @@
         display: flex;
         font-size: 12px;
         color: #999999;
+        &__member {
+        }
       }
     }
     .main-header__edit-btn {
