--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,14 +1,18 @@
 .chat-main
   .main-header
     .main-header__left-box
-      %h2.main-header__left-box__current-group
-        text
+      .main-header__left-box__current-group
+        #{@group.name}
+      .chat-header__users
       %ul.main-header__left-box__member-list
         Member:
         %li.main-header__left-box__member-list-member
+        - @group.users.each do |user|
+          %span.main-header__user #{user.name}
     .main-header__edit-btn
       = link_to "#" do
         Edit
+
   .messages
     = render @messages
 
@@ -21,11 +25,3 @@
             = icon('fas', 'image', class: 'icon')
             = f.file_field :image, class: 'input-box__image__file'
         = f.submit 'Send', class: 'form__submit'
-  -# .forms
-  -#   .form
-  -#     .input-box
-  -#       %input{type:"text", class: "input-box__text", placeholder: "type a message"}
-  -#       %label{class: "input-box__image"}
-  -#         = icon('fas', 'image')
-  -#         %input{type:"file", class: "input-box__image__file"}
-  -#     %input{type: "submit", class: "submit-btn", value: "Send"}
