--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -19,4 +19,4 @@
         %p.group__name
           = group.name
         %p.group__message
-          まだメッセージがありません
+          = group.show_last_message
