--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -44,6 +44,7 @@
     background-color: #fafafa;
     height: calc(100% - 190px);
     padding: 46px 40px;
+    overflow: scroll;
     .message {
       padding-bottom: 40px;
       &__upper-info {
