--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -14,6 +14,7 @@
             %span<>
             
   .groups
+    -# - binding.pry
     - current_user.groups.each do |group|
       = link_to group_messages_path(group), class: "group" do
         %p.group__name
