--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -21,7 +21,8 @@
         display: flex;
         font-size: 12px;
         color: #999999;
-        &__member {
+        &-member {
+          margin-left: 0.3rem;
         }
       }
     }
